# agent-mesh-knowledge

./: .gitignore  CONTRIBUTING.md  README.md  agents.yaml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
agents/: agents.yaml
agents/clawdy/: Tatooine-Integration-Guide.md
agents/moltdude/: vps-access-test.md  vps-profile.md
agents/shared/: Formal-Protocol-v1.0.md
docs/: authentication-v1.2.md  bayesian-update-protocol-v1.3.md  git-workflow-v1.1.md  identity-governance.md  memory-architecture-v1.0.md  protocol-analysis-feedback.md  slack-fallback-v1.2.md  soul-checklist.md  v1.1-git-workflow-update.md  v1.2-authentication-protocol.md  v1.2-fallback-channels-slack.md  v1.3-bayesian-update-protocol.md
scripts/: setup-authentication.sh  sign-message.sh  sign_message.py  slack_fallback_bot.py  test-slack-api.sh  test-slack-fallback.sh  verify-message.sh  verify_message.py
status/: SLACK_ACTIVATION.md
tests/: __init__.py  auth-test-message.md  conftest.py  sample-research-signed.md  sample-research-unsigned.md  test-02-fine-tuning-vs-prompts.md  test-03-mcp-debate-synthesis.md  test_model_router.py  test_signing.py
tools/memory-vector/: SKILL.md  index.js  package.json
tools/model-router/: SKILL.md  package.json  router.js  skill.json
tools/model-router/tests/: router.test.js
